@@ -67,6 +67,7 @@ setup(name=name, version=version, description=description,
           'psycopg2',
           'pytz',
           'setuptools',
+          'seantis.plonetools>=0.9',
           'SQLAlchemy>=0.7.3',
           'tablib',
           'xlwt',
